# fem-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: bimat_characterization_10k.yaml  bimat_characterization_campaign.yaml  elasticity2d_campaign.json  framework_smoke.json  grf_bimat_campaign.json  grf_bimat_campaign.yaml
docs/: spinodoid.md
notebooks/: bimat_characterization_demo.ipynb  grf_bimat_demo.ipynb  spinodoid_demo.ipynb
sim/freefem/3dCurve/: all.edp
sim/freefem/3dSurf/: all.edp
sim/freefem/bem/: Helmholtz_Cobracavity.edp  Helmholtz_circle_Dirichlet_all_direct.edp  Helmholtz_circle_Dirichlet_all_indirect.edp  Helmholtz_circle_Dirichlet_simple.edp  Helmholtz_circle_Neumann_all_direct.edp  Helmholtz_circle_Neumann_all_indirect.edp  Maxwell_EFIE_sphere.edp  Maxwell_cube_EFIE.edp
sim/freefem/eigen/: all.edp
sim/freefem/examples/: BlackScholes2D.edp  Heat.edp  NSNewton.edp  NSprojection.edp  all.edp  condensor.edp  convects.edp  dist-projection.edp  framework_smoke.edp  heatex.edp  lame.edp  membrane.edp  muwave.edp  optimcontrol.edp  potential.edp  schwarz.edp  (+9 more)
src/fem_sim/: __init__.py  campaign.py  cli.py  config.py  dataset.py  freefem_binary.py  geometry.py  inspect.py  load_case.py  pixel_to_fem.py  result.py  runner.py  video.py  vtk_export.py
tests/: test_campaign.py  test_config.py  test_fem_roundtrip.py  test_fem_roundtrip_jaxfem.py  test_freefem.py  test_geometry.py  test_jaxfem.py  test_jaxfem_smoke.py  test_load_case.py  test_plugins.py  test_runner.py  test_vtk_export.py
tests/fixtures/: jaxfem_elasticity_smoke.py
(+105 files in other folders)
